fix position scrollbar

--- a/public/common.blocks/main/channels/channels.css
+++ b/public/common.blocks/main/channels/channels.css
@@ -3,5 +3,4 @@
 
 .channels {
   height: 34.8rem;
-  padding-right: 0.8rem;
 }
