--- a/public/library.blocks/simplebar-scrollbar/simplebar-scrollbar.css
+++ b/public/library.blocks/simplebar-scrollbar/simplebar-scrollbar.css
@@ -3,9 +3,9 @@
 }
 
 .simplebar-track.simplebar-vertical .simplebar-scrollbar::before {
-  top: 2px;
-  left: 2px;
-  width: 4px;
+  top: 0.1rem;
+  left: 0.1rem;
+  width: 0.2rem;
 }
 
 .simplebar-scrollbar::before {
@@ -15,7 +15,8 @@
 }
 
 .simplebar-track.simplebar-vertical {
-  width: 8px;
+  right: -0.8rem;
+  width: 0.4rem;
   background-color: #f2f2f2;
   border-radius: 0.1rem;
 }
